--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
   </main>
 
-  <script src="/Js/app.js"></script>
+  <script src="/mile-stone-one/Js/app.js"></script>
 </body>
 
 </html>
