--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       
       <div class="line">
         <div class="space"></div>
-          <img id="my-image" src="images/icon-arrow.svg" alt="Calculate Age" />
+          <img id="my-image" src="/images/icon-arrow.svg" alt="Calculate Age" />
 
       </div>
       <section class="show-section">
