--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Age calculator app</title>
-    <link rel="stylesheet" href="normalize.css" type="text/css">
-    <link rel="stylesheet" href="Styel.css" type="text/css">
+    <link rel="stylesheet" href="Css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="Css/Styel.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
       
       <div class="line">
         <div class="space"></div>
-          <img id="my-image" src="/images/icon-arrow.svg" alt="Calculate Age" />
+          <img id="my-image" src="images/icon-arrow.svg" alt="Calculate Age" />
 
       </div>
       <section class="show-section">
